Fix bad viewport on small screens

--- a/scss/resume.scss
+++ b/scss/resume.scss
@@ -51,6 +51,12 @@ code {
 	color: black;
 }
 
+.row {
+	@include media("<tablet", "screen") {
+		max-width: 100%;
+	}
+}
+
 .container {
 	background-color: $resume-color;
 	margin: 0 auto;
@@ -111,6 +117,9 @@ code {
 
 	@include media("<tablet", "screen") {
 		padding: 0em 1em 0em 1em;
+		.contact {
+			padding: 0;
+		}
 	}
 
 }
